perf: incremental dirty-subset resolves, flat int/BitSet types, probe-first sims, render-thread trims (2.1.3)